[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 479.0
margin_top = 266.0
margin_right = 544.0
margin_bottom = 334.0

[node name="PuzzlesMenuButton" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Puzzles"

[node name="SandboxButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Sandbox"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Exit"
[connection signal="pressed" from="VBoxContainer/PuzzlesMenuButton" to="." method="_on_PuzzlesMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
